src/pages/Shop/Shop.scss
@use '../../styles/partials/breakpoints' as *;
@use '../../styles/partials/font-faces' as *;

.shop-page {
  width: 100%;
  padding-bottom: 10rem;
  background-color: #f7f4f2;
  display: flex;
  flex-direction: column;

  &__header {
    font-family: 'Baskerville Bold';
    color: rgb(248, 190, 175);
    font-size: 3rem;
  }

  &__products-list {
    display: grid;
    max-width: 1280px;
    margin-top: 3rem;
    margin: 0 auto;
  }
}

@include small() {
  .shop-page {
    &__header {
      margin-top: 10rem;
      padding-left: 2rem;
      font-size: 2rem;
    }

    &__products {
      padding: 2rem 2rem 0rem 2rem;
    }

    &__products-list {
      grid-template-columns: 1fr;
      row-gap: 7rem;
    }
  }
}

@include medium() {
  .shop-page {
    &__header {
      margin-top: 10rem;
      align-self: center;
    }

    &__products {
      padding: 2rem 4rem 0rem 4rem;
    }

    &__products-list {
      padding-top: 2rem;
      grid-template-columns: repeat(4, auto);
      border-top: 1px solid rgb(248, 190, 175, 0.3);
      justify-content: space-between;
      column-gap: 2rem;
      row-gap: 12rem;
    }
  }
}

@include large() {
  .shop-page {
    &__header {
      margin-top: 10rem;
      align-self: center;
    }

    &__products {
      padding: 2rem 4rem 0rem 4rem;
    }

    &__products-list {
      grid-template-columns: repeat(4, auto);
      border-top: 1px solid rgb(248, 190, 175, 0.3);
      padding-top: 2rem;
      justify-content: space-between;
      column-gap: 2rem;
      row-gap: 10rem;
    }
  }
}

